--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -11,19 +11,23 @@ on:
         type: string
 
 permissions:
-  contents: read
   pages: write
   id-token: write
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
+
     steps:
       - name: Download build artifact
-        uses: actions/download-artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: ${{ inputs.artifact-name }}
+          path: ${{ inputs.artifact-path }}
 
       - name: Deploy to GitHub pages
         id: deployment
