--- a/.github/workflows/push-main.yml
+++ b/.github/workflows/push-main.yml
@@ -13,11 +13,11 @@ jobs:
   ci:
     uses: ./.github/workflows/ci.yml
     with:
-      artifact-name: ${{ env.artifact-name }}
-      path: ${{ env.artifact-path }}
+      artifact-name: ${{ vars.artifact-name }}
+      path: ${{ vars.artifact-path }}
 
   cd:
     uses: ./.github/workflows/cd.yml
     with:
-      artifact-name: ${{ env.artifact-name }}
-      path: ${{ env.artifact-path }}
+      artifact-name: ${{ vars.artifact-name }}
+      path: ${{ vars.artifact-path }}
