--- a/.github/workflows/push-main.yml
+++ b/.github/workflows/push-main.yml
@@ -14,10 +14,10 @@ jobs:
     uses: ./.github/workflows/ci.yml
     with:
       artifact-name: ${{ vars.artifact-name }}
-      path: ${{ vars.artifact-path }}
+      artifact-path: ${{ vars.artifact-path }}
 
   cd:
     uses: ./.github/workflows/cd.yml
     with:
       artifact-name: ${{ vars.artifact-name }}
-      path: ${{ vars.artifact-path }}
+      artifact-path: ${{ vars.artifact-path }}
