--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://www.schemastore.org/package.json",
   "name": "asiana.se",
   "type": "module",
   "version": "0.0.1",
@@ -8,7 +9,19 @@
     "preview": "astro preview",
     "astro": "astro"
   },
+
   "dependencies": {
     "astro": "^5.10.1"
+  },
+
+  "engines": {
+    "node": ">=22"
+  },
+
+  "devEngines": {
+    "packageManager": {
+      "name": "pnpm",
+      "version": "10"
+    }
   }
 }
