--- a/.github/workflows/push-dev.yml
+++ b/.github/workflows/push-dev.yml
@@ -6,12 +6,12 @@ on:
       - main
 
 env:
-  artifact-name: build_${{ github.ref_name }}_${{ github.sha }}
-  artifact-path: dist
+  ARTIFACT_NAME: build_${{ github.ref_name }}_${{ github.sha }}
+  ARTIFACT_PATH: dist
 
 jobs:
   ci:
     uses: ./.github/workflows/ci.yml
     with:
-      artifact-name: ${{ vars.artifact-name }}
-      path: ${{ vars.artifact-path }}
+      artifact-name: ${{ vars.ARTIFACT_NAME }}
+      artifact-path: ${{ vars.ARTIFACT_PATH }}
