--- a/.github/workflows/push-dev.yml
+++ b/.github/workflows/push-dev.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   ci:
+    name: CI
     uses: ./.github/workflows/ci.yml
     with:
       artifact-name: build_${{ github.ref_name }}_${{ github.sha }}
