--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@iconify-json/circle-flags": "^1.2.6",
+    "@iconify-json/mingcute": "^1.2.3",
     "astro": "^5.10.1",
+    "astro-icon": "^1.1.5",
+    "csv-parse": "^5.6.0",
     "sass": "^1.89.2"
   },
   "engines": {
