--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@iconify-json/circle-flags": "^1.2.6",
+    "@iconify-json/fxemoji": "^1.2.1",
     "@iconify-json/mingcute": "^1.2.3",
     "astro": "^5.11.0",
     "astro-icon": "^1.1.5",
     "csv-parse": "^5.6.0",
-    "sass": "^1.89.2"
+    "sass": "^1.89.2",
+    "sharp": "^0.34.3"
   },
   "engines": {
     "node": ">=20"
